--- a/templates/seat_selection.html
+++ b/templates/seat_selection.html
@@ -12,7 +12,8 @@
             justify-content: center;
             /* margin: 5%; */
             /* text-align: center; */
-            /* border: 2px solid black; */
+            border: 10px solid rgb(51, 189, 244);
+            border-radius: 10px;
         }
         h1, h2 {
             justify-content: center;
@@ -30,6 +31,16 @@
             font-style: italic;
             /* text-decoration: underline; */
             color: #ff0077;
+            background-color: antiquewhite;
+            border-radius: 5px;
+        }
+        #capac {
+            margin-top: 40px;
+        }
+        #bDisplay {
+            margin-top: 10px;
+            text-align: center;
+
         }
         #bus-layout {
             /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
@@ -41,7 +52,7 @@
             /* margin-top: 20px; */
             /* margin: 30px; */
             margin-bottom: 10px;
-            background-color: rgb(235, 249, 249);
+            background-color: rgb(211, 250, 250);
             border: 3px solid rgb(0, 157, 255);
             /* padding: 10px; */
             padding-left: 30px;
@@ -60,7 +71,9 @@
             /* margin-top: 20px; */
             /* margin: 30px; */
             margin-bottom: 10px;
-            background-color: rgb(235, 249, 249);
+            /* background-color: rgb(235, 249, 249); */
+            background-color: rgb(211, 250, 250);
+
             border: 3px solid rgb(0, 157, 255);
             /* padding: 10px; */
             padding-left: 30px;
@@ -134,9 +147,10 @@
         }
 
         #book-button{
-            margin-left: 570px;
-            margin-top: 20px;
-            margin-bottom: 20px;
+            margin-left: 560px;
+            margin-top: 30px;
+            margin-bottom: 40px;
+            margin-right: 5px;
             padding: 10px 20px;
             font-size: 16px;
             border: none;
@@ -177,6 +191,9 @@
     </div>
     <div id="bus-layout2">
         <!-- Bus layout will be generated dynamically here -->
+    </div>
+    <div id="bDisplay">
+
     </div>
     <button id="book-button">Book Selected Seat</button>
     <button id="cancel-button">Cancel Booked Seat</button>
