--- a/templates/landing.html
+++ b/templates/landing.html
@@ -10,9 +10,18 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            /* background-image: url("../static/images/bg.jpg"); */
-            /* background-attachment: fixed; */
-  /* background-size: cover; */
+            background-image: url("../static/images/9.avif");
+            background-image: url("../static/images/map2.jpg");
+            /* background-image: url("../static/images/13.webp"); */
+
+            /* background-image: url("../static/images/buscv.jpg"); */
+            background-attachment: fixed;
+  /* background-size: auto; */
+  /* background-size: contain; */
+ background-size: cover;
+ /* image-rendering: -webkit-optimize-contrast; */
+ /* image-rendering: crisp-edges; */
+ 
 
         }
         
