--- a/templates/login.html
+++ b/templates/login.html
@@ -8,10 +8,21 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url("../static/images/bg.jpg");
+            background-image: url("../static/images/b.jpg");
+            /* opacity: 2; */
             background-attachment: fixed;
   background-size: cover;
+  background-size: contain;
+
         }
+        .container {
+            /* background-color: white; */
+            /* background-color: azure; */
+            /* background-color: ; */
+    box-shadow: 0px 0px 30px 20px rgba(0, 0, 0, 0.1);
+            /* border: 2px solid rgb(55, 55, 57) */
+        }
+        
         .IITGNlogo {
             height:200px;
             /* justify-content: center; */
