--- a/templates/seat_selection.html
+++ b/templates/seat_selection.html
@@ -9,11 +9,17 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
             background-color: azure;
+            /* background-color: aliceblue; */
+            /* background-color: bisque; */
+            /* background-color: cornflowerblue; */
             justify-content: center;
             /* margin: 5%; */
             /* text-align: center; */
-            border: 10px solid rgb(51, 189, 244);
+            /* border: 10px solid rgb(51, 189, 244); */
             border-radius: 10px;
+            box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
+            
+
         }
         h1, h2 {
             justify-content: center;
@@ -28,10 +34,15 @@
         h1 {
             /* border: 0.5px solid #007bff; */
             margin: 20px;
+            padding: 5px;
             font-style: italic;
+            box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
+
             /* text-decoration: underline; */
-            color: #ff0077;
+            /* color: #ff0077; */
+            color: #ffffff;
             background-color: antiquewhite;
+            background-color: teal;
             border-radius: 5px;
         }
         #capac {
@@ -60,6 +71,8 @@
             padding-bottom: 10px;
             width: 40%;
             border-radius: 20px;
+            box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
+
         }
         #bus-layout2 {
             /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
@@ -81,6 +94,8 @@
             padding-bottom: 10px;
             width: 26%;
             border-radius: 20px;
+            box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
+
         }
         .seat {
             display: inline-block;
@@ -96,6 +111,8 @@
             background-color: #fff;
             align-items: center;
             justify-content: center;
+            box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+
         }
 
         .centseat {
@@ -113,6 +130,8 @@
             align-items: center;
             margin-left: 75px;
             justify-content: center;
+            box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+
         }
         .centseat2 {
             display: inline-block;
@@ -129,12 +148,18 @@
             align-items: center;
             margin-left: 122px;
             justify-content: center;
+            box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+
         }
         .selected {
-            background-color: #ffc107; /* Change color to indicate selected seats */
+            background-color: #ffc107; 
+            /* box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1); */
+
+            /* background-color: teal;  */
         }
         .booked {
-            background-color: #3e79bd; /* Change color to indicate booked seats */
+            background-color: #5b98de; /* Change color to indicate booked seats */
+            /* background-color: ;  */
         }
         .gap {
             display: inline-block;
@@ -156,9 +181,12 @@
             border: none;
             border-radius: 5px;
             background-color: #007bff;
+            background-color: royalblue;
             color: #fff;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+
         }
 
         #cancel-button{
@@ -169,14 +197,18 @@
             border: none;
             border-radius: 5px;
             background-color: #ff0077;
+            background-color: teal; 
+            /* background-color: seagreen; */
             color: #fff;
             cursor: pointer;
+            box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+
             transition: background-color 0.3s ease;
         }
 
         #book-button:hover,
         #cancel-button:hover {
-            background-color: #00b34b;
+            background-color: olivedrab;
         }
 
     </style>
