--- a/templates/login_signup_index.html
+++ b/templates/login_signup_index.html
@@ -8,9 +8,22 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url("../static/images/bg.jpg");
+            background-image: url("../static/images/b.jpg");
+            background-image: url("../static/images/13.webp");
+
+            /* opacity: 2; */
             background-attachment: fixed;
+  /* background-size: cover; */
+  background-size: auto;
   background-size: cover;
+  /* background-size: contain; */
+        }
+        .container {
+            /* background-color: white; */
+            /* background-color: azure; */
+            /* background-color: ; */
+    box-shadow: 0px 0px 30px 20px rgba(0, 0, 0, 0.1);
+            /* border: 2px solid rgb(55, 55, 57) */
         }
         .IITGNlogo {
             height:200px;
@@ -31,6 +44,7 @@
 <body>
     <div class="container">
         <img src="../static/images/IITGNlogo.png" alt="Italian Trulli" class="IITGNlogo">
+        <!-- <img src="../static/images/sbtbsimg.png" alt="Italian Trulli" class="IITGNlogo"> -->
         <h2>Welcome to IIT Gandhinagar Transport Management System</h2>
         <form method="POST" action="/">
             <label for="option">Choose an option:</label>
