--- a/templates/custom_query.html
+++ b/templates/custom_query.html
@@ -5,27 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SQL Query Executor</title>
     <style>
-        #output {
-            display: none; /* Initially hidden */
+        #query-form {
+            width: 50%;
+            margin: 0 auto;
             padding: 20px;
             border: 1px solid #ccc;
-            margin-top: 20px;
+            margin-bottom: 20px;
         }
-        #output.show {
-            display: block; /* Show when clicked */
+        #output {
+            width: 100%;
+            height: 400px;
+            border: 1px solid #ccc;
         }
     </style>
 </head>
 <body>
     <h1>ADMIN TERMINAL</h1>
-    <form action="/execute_query" method="post">
-        <label for="sql_query">Enter your SQL query:</label><br>
-        <textarea id="sql_query" name="sql_query" rows="5" cols="50" placeholder="Enter your query here..."></textarea><br><br>
-        <input type="submit" value="Execute Query">
-    </form>
+    <div id="query-form">
+        <form action="/execute_query" method="post">
+            <label for="sql_query">Enter your SQL query:</label><br>
+            <textarea id="sql_query" name="sql_query" rows="5" cols="50" placeholder="Enter your query here..."></textarea><br><br>
+            <input type="submit" value="Execute Query">
+        </form>
 
-    <p>To modify the admins, please write the following query:</p>
-    <p>Provide access: UPDATE Users SET admin_priveleges='yes' WHERE email=</p>
-    <p>Remove access: UPDATE Users SET admin_priveleges='no' WHERE email=</p>
+        <p>To modify the admins, please write the following query:</p>
+        <p>Provide access: UPDATE Users SET admin_priveleges='yes' WHERE email=</p>
+        <p>Remove access: UPDATE Users SET admin_priveleges='no' WHERE email=</p>
+    </div>
+    <!-- <iframe id="output" name="output" src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik"></iframe> -->
 </body>
 </html>
